import "msgcode.proto";
package PaoEntity;

//快速注册
message LoginRegisterKey_Req {
    
    optional MsgCode    msgcode             = 1     [default = LG_RG_KEY_REQ];

    required string     deviceCode          = 2;
}

message LoginRegisterKey_Res {
    // Enumeration Test
    optional MsgCode    msgcode             = 1     [default = LG_RG_KEY_RES];
    required int32 code = 2;    //创建结果，0：成功；1：注册过于频繁，请稍后再试，2：未知错误
    required string account = 3; //账号
    required string psw = 4;  //密码
}

//注册账号
message CMD_LG_CTL_REGIST {
    optional MsgCode msgcode          = 1 [default = LG_CTL_REGIST];
    required string account = 2 ; //账号
    required string psw = 3;  //密码
    required string code = 4; //验证码
}

message CMD_LG_LTC_REGIST {
    optional MsgCode msgcode          = 1 [default = LG_LTC_REGIST];
    required int32 retcode  = 2;//0：成功，1：账号已存在，2：注册过于频繁，3：验证码错误，4：账号长度不符，5：密码长度不符，6：账号格式不符，7：密码格式不符，8：账号和密码不能一样
}

//更新密码
message CMD_LG_CTL_MODIFYPSW {
    optional MsgCode msgcode = 1 [default = LG_CTL_MODIFYPSW];
    required string newpsw = 2; //新密码
    required string account = 3; //账号
    required string oldpsw = 4; //旧密码
}

message CMD_LG_LTC_MODIFYPSW {
    optional MsgCode msgcode = 1 [default = LG_LTC_MODIFYPSW];
    required int32 retcode = 2; //0：成功，1：密码长度不符，2：密码格式不符
}

//
message CMD_LG_CTL_REGCODE {
  optional MsgCode msgcode = 1 [default = LG_CTL_REGCODE];
}

message CMD_LG_LTC_REGCODE {
    optional MsgCode msgcode = 1 [default = LG_LTC_REGCODE];
    required string code = 2; //验证码
}

message CMD_LG_CTL_LOGIN {
    optional MsgCode mgscode = 1 [default = LG_CTL_LOGIN];
    required string account = 2;
    required string password = 3;
    required string DeviceCode = 4;
    required string AppCode = 5;
}

message CMD_LG_LTC_LOGIN {
    optional MsgCode msgcode = 1[default = LG_LTC_LOGIN];
    required int32 result = 2; //0:成功，1:密码错误，2:没有该用户,3:账号被封停，4：账号被永久封停，5：登录失败，数据出错，6：登录超时
    optional int32 BanTime = 3; //被封停截止时间
    optional string reason = 4; //封停原因
    optional string Token = 5;  //登录密令
}

message CMD_LG_CTG_LOGIN {
    optional MsgCode msgcode = 1[default = LG_CTG_LOGIN];
    required string Token = 2;  //待验证Token
    required int32 ServerID = 3;
    required string DeviceID = 4; //设备ID
    required string PlatID = 5; //平台ID
    required string ClientOS = 6; // 设备系统
    optional bool Reconnect = 7[default = false]; //是否断线重连
}

message ServerInfo
{
    required int32 ServerId = 1;    //服务器ID
    required string Type = 2;        //服务器类型
    required int32 Zone = 3;        //区域代码，0x86代表大陆地区
    required string Name = 4;       //服务器名
    required string GateIP = 5;     //网关IP
    required int32 GatePort = 6;    //网关端口
    required int32 State = 7;       //服务器状态：0:维护，1：新区，2：火爆，3：正常，5：推荐
    optional string Tips = 8[default=""]; //服务器维护时的提示信息
}

message PageInfo
{
    required string PageName = 1;   //页签名
    required int32 SortId = 2;      //排序ID
    repeated ServerInfo ServerS = 3;    //服务器列表
}

message CMD_LG_LTC_SERVERLIST {
    optional MsgCode msgcode = 1[default = LG_LTC_SERVERLIST];
    repeated PageInfo Pages = 2;    //页签表
}

message CMD_LG_CTL_SERVERLIST {
    optional MsgCode msgcode = 1[default = LG_CTL_SERVERLIST];    
    optional string Account = 2;    //账号
    optional string PackName = 3;   //包名
    optional string Version = 4;    //版本号
}

message CMD_LG_GTC_CLOSECONNECTION {
    optional MsgCode msgcode = 1[default = LG_GTC_CLOSECONNECTION];
    required CloseReason Reason = 2;

    enum CloseReason{
        ForceLogin = 1;         //被顶号
        Expired    = 2;         //登录超时
        IllegalOpration = 3;    //非法操作
        ServerShutDown = 4;     //与服务器断开连接
        CatastrophicError = 5;  //灾难性错误

    }
}

message LastInfo
{
    required int32 ServerId = 1;    //服务器ID
    required string Type = 2;        //服务器类型 
}

message CMD_LG_LTC_LATESTLOGININFO
{
    optional MsgCode msgcode = 1[default = LG_LTC_LATESTLOGININFO];
    repeated LastInfo ServerList = 2;
}

message CMD_LG_GTC_LOGIN
{
    optional MsgCode msgcode = 1[default = LG_GTC_LOGIN];
    required int32 ReturnCode = 2;  //1:成功，2：超时，3：非法登陆
}

message CMD_LG_LTC_NOTICE
{
    optional MsgCode msgcode = 1[default = LG_LTC_NOTICE];
    required string Tittle = 2;
    required string Content = 3;
}

message CMD_LG_CTG_KEEPALIVE
{
    optional MsgCode msgcode = 1[default = LG_CTG_KEEPALIVE];
}

message CMD_LG_GTC_KEEPALIVE
{
    optional MsgCode msgcode = 1[default = LG_GTC_KEEPALIVE];
}

message CMD_LG_CTS_UmengInfo
{
    optional MsgCode msgcode = 1[default = LG_CTS_UmengInfo];
    required string UmengToken = 2; //友盟Token
}

message CMD_LG_STC_UmengInfoResp
{
    optional MsgCode msgcode = 1[default = LG_STC_UmengInfoResp];    
}

message CMD_LG_STC_NotLogined
{
    optional MsgCode msgcode = 1[default = LG_STC_NotLogined];   
}